   setBaseRef(), etc.
 - Moved AbstractRestlet.forward() method to ContextData class.
 - Renamed static Reference.toUri() method into Reference.toString() for consistency with existing Reference.toString() methods (non-static).
 - Renamed Call.setBestOutput() into Call.setOutput() and adjusted the Javadocs to explain behavior (set best output for the given resource).
 
[Other changes] 
 - Separated the HTTP client connector (based on JDK's HttpUrlConnection) previously integrated to the NRE core. This will allow future alternative
   implementations like based on Apache HTTP Client or Apache MINA NIO framework. Please ensure that the new extension (com.noelios.restlet.ext.net) is
   added to your classpath when the application is making HTTP client calls.
 - Added ParameterList.getFirstValue() methods taking and additional "defaultValue" parameter.
 - Parametrized connectors
 - Added HTTPS connector for Jetty 6.0
 - The Jetty 6 extension now appears in the Javadocs due to the package renaming of the Jetty 5 extension.
 - Updated documentation, especially for the distribution. Suggested by Dave Pawson.
 - Added more control on Simple HTTPS connector, see list of parameters.
 - Updated AsyncWeb to version 0.8.2.
 - The number of worker threads can now be configured for AsyncWeb.
 - Refactored the names in the NRE's impl package, uses Abstract prefix for abstract classes and Default prefix for other ones implementing Restlet API.
 - The ServerServlet connector now copies all Servlet initialization parameters (from the Web Application then from the Web Container) into the connector
   parameters list. This allows the settings of the parameters related to HTTP server connectors in all cases (standalone or embedded).
 - ContextClient now uses parameters for its configuration (default encoding, language, mediatype, etc.).
 - Some unit test were catching exceptions, preventing JUnit from failing the tests.