@@ -58,17 +58,20 @@
          <ul>
             <li>Beta 18 release
                <ul>
-                  <li><u>[API breaker]</u> Introduce the concept of Restlet Application, similar to Web Application in the Servlet world (issues #9, #75, #76, #77, #105, #140).</li>
-                  <li><u>[API breaker]</u> Allow standard parameterization of all connectors via the Connector.getParameterList() modifiable list (issue #114)</li>
+                  <li><u>[API breaker]</u> Support connector parameters (issue #114)</li>
+                  <li>Caching conflicts with content negotiation (issue #144)</li>
+                  <li><u>[API breaker]</u> Add call Converters (issue #145)</li>
                </ul>
             </li>
          </ul>
          <ul>
             <li>Beta 19 release
                <ul>
-                  <li>Allow user language forcing when language extension found (issue #39)</li>
+                  <li><u>[API breaker]</u> Introduce the concept of Restlet Application, similar to Web Application in the Servlet world (issues #9, #75, #76, #77, #105, #140).</li>
+                  <li>Allow language forcing even if extension found (issue #39)</li>
                   <li>Add support for modifications to DirectoryHandler (issue #50)</li>
                   <li>Support extraction of segments (issue #120)</li>
+                  <li>Support attributes in CallModel (issue #146)</li>
                </ul>
             </li>
          </ul>
@@ -141,7 +144,7 @@
    <table>
       <tr>
          <td style="vertical-align: middle;" rowspan="2"><a href="http://www.java.net/"><img src="http://www.restlet.org/images/javanet.gif" alt="java.net member" /></a></td>
-         <td>Version 1.3, last modified on 2006-07-23</td>
+         <td>Version 1.4, last modified on 2006-08-08</td>
       </tr>
       <tr>
          <td>Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.</td>
