@@ -42,7 +42,8 @@ Changes log
  - Moved AbstractRestlet.forward() method to ContextData class.
  - Renamed static Reference.toUri() method into Reference.toString() for consistency with existing Reference.toString() methods (non-static).
  - Renamed Call.setBestOutput() into Call.setOutput() and adjusted the Javadocs to explain behavior (set best output for the given resource).
- 
+ - Removed addition of custom headers from Call.connectorCall for JavaMailClient and HttpClient. Will now require the usage of Converters.
+   
 [Other changes] 
  - Separated the HTTP client connector (based on JDK's HttpUrlConnection) previously integrated to the NRE core. This will allow future alternative
    implementations like based on Apache HTTP Client or Apache MINA NIO framework. Please ensure that the new extension (com.noelios.restlet.ext.net) is
